# Argus

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RUNNING.md  TODO.md  mock_sdn_controller.py  pscan.py  pyproject.toml  requirements.txt  setup.py
backend/: __init__.py  __main__.py  app.py  scan_tasks.py  topology_tasks.py
backend/api/: __init__.py  auth.py  controller.py  dashboard.py  help_page.py  history.py  reports.py  scan.py  scan_api.py  stubs.py  topology.py
backend/cli/: __init__.py  commands.py  main.py  output.py
backend/config/: __init__.py  constants.py  settings.py
backend/core/: __init__.py  _decoy_impl.py  decoy.py  mac.py  models.py  network.py  scanner.py  services.py  vuln.py
backend/database/: db.py  schema.sql
backend/utils/: __init__.py  helpers.py  logger.py  validators.py
compat/: decoy_scanner.py  mac_spoofer.py  pscan.py  scanner.py  vuln_scanner.py
data/: vuln_database.json
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  UI_GUIDELINES.md
frontend/static/css/: app.css
frontend/static/js/: app.js
frontend/templates/: base.html  controller.html  dashboard.html  help.html  history.html  login.html  report.html  reports_index.html  scan.html  scan_detail.html  signup.html  stub.html  topology.html
frontend/templates/errors/: 404.html  500.html
scripts/: pscan.bat
tests/: conftest.py  test_cli_regression.py  test_core_scan.py  test_db.py
