[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus"
version = "2.11.0"
description = "Argus — SDN-aware Network Scanner & Security Dashboard"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: System :: Networking",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]
decoy = [
    "scapy>=2.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
argus = "backend.cli.main:main"

[project.urls]
Homepage = "https://github.com/FANATICAL-SCOUT/Argus"
Repository = "https://github.com/FANATICAL-SCOUT/Argus"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["backend"]
omit = ["tests/*", "backend/api/*"]
